# Talent-Radar

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  anomaly.py  config.py  database.py  features.py  forecasting.py  main.py  middleware.py  mlflow_tracker.py  model.py  monitoring.py  rag.py  validation.py
pipelines/: __init__.py  retrain_dag.py
screenshots/: architecture.txt
scripts/: __init__.py  generate_diagram.py  seed_data.py  train_model.py
tests/: conftest.py  test_anomaly.py  test_anomaly_api.py  test_api.py  test_config.py  test_database.py  test_features.py  test_forecast_api.py  test_forecasting.py  test_middleware.py  test_model.py  test_monitoring.py  test_pipeline.py  test_rag.py  test_similar.py  test_validation.py
