[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talent-radar"
version = "1.0.0"
description = "ML platform for salary prediction and skill demand intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "atharvadevne123", email = "devneatharva@gmail.com"}]
keywords = ["salary", "prediction", "ml", "fastapi", "xgboost", "lightgbm", "faiss"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -p no:warnings"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
no_error_summary = true
python_version = "3.11"
strict = false
warn_return_any = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    'if __name__ == "__main__":',
    "raise NotImplementedError",
    '^\s*\.\.\.$',
]
